--- a/.github/workflows/main_tiner.yml
+++ b/.github/workflows/main_tiner.yml
@@ -22,7 +22,7 @@ jobs:
           node-version: '22'
 
       - name: Install Angular CLI
-        run: npm i -g @angular/cli@18
+        run: npm i -g @angular/cli
 
       - name: Insstall dependencies and build angular app
         run: 
